# bijux-canon

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_TREE.md  README.md  SECURITY.md  TESTS.md  TOOLING.md  USAGE.md  mkdocs.shared.yml  mkdocs.yml  pyproject.toml  tox.ini
.bijux/: checks.consumer.json
.github/: bijux-std-shared.sha256  dependabot.yml  release-ghcr.env  release-pypi.env  release.env
agentic-flows/: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  SECURITY.md  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
bijux-agent/: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  deptry.toml  failure_policy.yaml  mkdocs.yml  pyproject.toml  tox.ini
bijux-agent/changelog.d/: .gitkeep
bijux-agent/config/: cosmic-ray.toml  coveragerc.ini  mypy-core.ini  mypy-extended.ini  pyrightconfig.json  pytest.ini  ruff.toml
bijux-agent/docs/: doc_checksums.json
bijux-agent/docs/architecture/: ARCHITECTURE.md
bijux-agent/docs/examples/: document-review.md
bijux-agent/docs/legal/: security.md
bijux-agent/docs/maintainer/: CHANGELOG.md  anti-features.md  breaking_refactor.md  code-map.md  docs_contract.md  documentation-invariant.md  evaluation.md  first-refactor-plan.md  project_tree.md  refactor-invariants.md  refactor-plan.md  system-boundaries.md  tooling.md  typing-status.md  vocabulary.md
bijux-agent/docs/maintainer/shared/: style.md
bijux-agent/docs/overview/: concepts.md  readme.md
bijux-agent/docs/spec/: architecture_diagram.md  execution_artifacts.md  execution_intent_matrix.md  execution_lifecycle.md  failure_semantics.md
bijux-agent/docs/spec/agents/: agent-contract.md
bijux-agent/docs/spec/invariants/: determinism.md
bijux-agent/docs/spec/models/: deepseek.md
bijux-agent/docs/spec/tracing-replay/: why-trace-exists.md
bijux-agent/docs/user/: usage.md
bijux-agent/examples/golden/: command.txt  input.txt
bijux-agent/examples/golden/result/: final_result.json
bijux-agent/makefiles/: dictionary.mk  lint.mk  publish.mk  quality.mk  security.mk  test.mk
bijux-agent/scripts/: check_line_limit.py  check_no_stray_dirs.py
bijux-agent/scripts/docs_builder/: helpers.py  mkdocs_manager.py
bijux-agent/scripts/docs_builder/artifacts_pages/: lint_page.py
bijux-agent/src/bijux_agent/: constants.py  enums.py  main.py
bijux-agent/src/bijux_agent/agents/: base.py
bijux-agent/src/bijux_agent/agents/critique/: __init__.py  agent.py  core.py
bijux-agent/src/bijux_agent/agents/critique/rules/: __init__.py  formatting.py  types.py
bijux-agent/src/bijux_agent/agents/file_reader/: __init__.py
bijux-agent/src/bijux_agent/agents/file_reader/capabilities/: binary.py  structured.py  text.py  universal_file_reader_core.py
bijux-agent/src/bijux_agent/agents/judge/: agent.py
bijux-agent/src/bijux_agent/agents/kernel/: __init__.py  execution_kernel.py
bijux-agent/src/bijux_agent/agents/planner/: agent.py
bijux-agent/src/bijux_agent/agents/summarizer/: __init__.py  agent.py
bijux-agent/src/bijux_agent/agents/summarizer/rules/: abstractive.py  extractive.py
bijux-agent/src/bijux_agent/agents/taskhandler/: __init__.py  agent.py
bijux-agent/src/bijux_agent/agents/validator/rules/: __init__.py  reporting.py  rule_execution.py
bijux-agent/src/bijux_agent/api/: __init__.py
bijux-agent/src/bijux_agent/api/v1/: errors.py  router.py  schemas.py
bijux-agent/src/bijux_agent/config/: __init__.py  defaults.py  env.py
bijux-agent/src/bijux_agent/models/: __init__.py  contract.py
bijux-agent/src/bijux_agent/orchestrator/: __init__.py  engine.py  policy.py
bijux-agent/src/bijux_agent/pipeline/: agent_registry.py  definition.py  epistemic.py  orchestration.py  pipeline.py  stages.py
bijux-agent/src/bijux_agent/pipeline/control/: controller.py  controller_runtime.py  phases.py
bijux-agent/src/bijux_agent/pipeline/execution/: interrupt.py  io.py  shard_processing.py  telemetry.py
bijux-agent/src/bijux_agent/pipeline/results/: decision.py  failure.py  outcome.py  results.py  types.py
bijux-agent/src/bijux_agent/pipeline/tracing/: epistemic.py  ordering.py  trace_validator.py
bijux-agent/src/bijux_agent/reference/: __init__.py  document_review.py
bijux-agent/src/bijux_agent/retrieval/: __init__.py  interfaces.py
bijux-agent/src/bijux_agent/schema/: _pydantic_typing.py  models.py
bijux-agent/src/bijux_agent/tracing/: dry_run.py  run_trace.json  schema_versioning.py
bijux-agent/src/bijux_agent/utilities/: __init__.py  final.py  prompt_hash.py  version.py
bijux-agent/stubs/pydantic/: config.pyi
bijux-agent/tests/: conftest.py
bijux-agent/tests/api/: test_openapi_schema_valid.py
bijux-agent/tests/e2e/: test_e2e_minimal.py  test_e2e_real_model.py
bijux-agent/tests/integration/: test_deepseek_live.py
bijux-agent/tests/invariants/: test_agents_no_lifecycle_overrides.py  test_agents_no_orchestration_imports.py  test_api_no_agent_imports.py  test_api_version_marker.py  test_architecture_doc.py  test_documentation_invariant.py  test_no_generated_files.py  test_no_legacy_artifacts.py  test_no_stray_dirs.py  test_pipeline_depth.py
bijux-agent/tests/snapshots/: agent_kernel_regression.json  refactor_safety_net.json
bijux-agent/tests/stubs/: __init__.py
bijux-agent/tests/unit/: test_agent_contracts.py  test_agent_output_schema.py  test_config_env.py  test_convergence.py  test_deepseek_adapter.py  test_defaults_versioning.py  test_examples_golden.py  test_execution_kernel_call_order.py  test_execution_kernel_lifecycle.py  test_main_cli.py  test_pipeline_behavior.py  test_pipeline_flow.py  test_pipeline_imports.py  test_prompt_hash.py  test_reuse_no_pyc.py  test_trace_hash_consistency.py  test_trace_ordering.py  test_trace_schema_snapshot.py  test_type_checking.py
bijux-agent/tests/utils/: __init__.py
bijux-rag/: CHANGELOG.md  Makefile  PROJECT_TREE.md  README.md  REUSE.toml  TOOLING.md  mkdocs.yml  pyproject.toml  pytest.ini
bijux-rar/: Makefile  REUSE.toml  deptry.toml  pyproject.toml  tox.ini
bijux-vex/: Makefile  (+5 more)
(+1188 files in other folders)
