[build-system]
requires = ["hatchling>=1.27.0,<1.30", "hatch-vcs>=0.4.0,<1.0"]
build-backend = "hatchling.build"

[project]
name = "bijux-canon-repository"
description = "Repository workspace for bijux-canon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://bijux.io/bijux-canon/"
Repository = "https://github.com/bijux/bijux-canon"
Issues = "https://github.com/bijux/bijux-canon/issues"
Changelog = "https://github.com/bijux/bijux-canon/blob/main/CHANGELOG.md"
Security = "https://github.com/bijux/bijux-canon/blob/main/SECURITY.md"

[dependency-groups]
dev = [
  "bijux-canon-agent[dev]",
  "bijux-canon-dev[dev]",
  "bijux-canon-index[dev]",
  "bijux-canon-ingest[dev]",
  "bijux-canon-reason[dev]",
  "bijux-canon-runtime[dev]",
  "agentic-flows",
  "bijux-agent",
  "bijux-rag",
  "bijux-rar",
  "bijux-vex",
  "mkdocs>=1.6.1,<2.0",
  "mkdocs-click>=0.9.0,<1.0",
  "mkdocs-gen-files>=0.5.0,<1.0",
  "mkdocs-git-revision-date-localized-plugin>=1.4.0,<2.0",
  "mkdocs-glightbox>=0.4.0,<1.0",
  "mkdocs-include-markdown-plugin>=7.0.0,<8.0",
  "mkdocs-literate-nav>=0.6.0,<1.0",
  "mkdocs-material>=9.5.39,<10.0",
  "mkdocs-minify-plugin>=0.8.0,<1.0",
  "mkdocs-redirects>=1.2.1,<2.0",
  "mkdocs-section-index>=0.3.10,<1.0",
  "mkdocstrings>=0.27.0,<2.0",
  "types-requests>=2.32.0,<3.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
major_version_zero = true
annotated_tag = true
version_provider = "scm"
tag_format = "v$version"
update_changelog_on_bump = false

[tool.bijux_canon]
public_release_packages = [
  "bijux-canon-runtime",
  "bijux-canon-agent",
  "bijux-canon-ingest",
  "bijux-canon-reason",
  "bijux-canon-index",
  "compat-agentic-flows",
  "compat-bijux-agent",
  "compat-bijux-rag",
  "compat-bijux-rar",
  "compat-bijux-vex",
]
internal_support_packages = [
  "bijux-canon-dev",
]
primary_packages = [
  "bijux-canon-dev",
  "bijux-canon-runtime",
  "bijux-canon-agent",
  "bijux-canon-ingest",
  "bijux-canon-reason",
  "bijux-canon-index",
]
compat_packages = [
  "compat-agentic-flows",
  "compat-bijux-agent",
  "compat-bijux-rag",
  "compat-bijux-rar",
  "compat-bijux-vex",
]
packages = [
  "bijux-canon-dev",
  "bijux-canon-runtime",
  "bijux-canon-agent",
  "bijux-canon-ingest",
  "bijux-canon-reason",
  "bijux-canon-index",
  "compat-agentic-flows",
  "compat-bijux-agent",
  "compat-bijux-rag",
  "compat-bijux-rar",
  "compat-bijux-vex",
]
docs_package = "bijux-canon-dev"
api_dir = "apis"
config_dir = "configs"
make_dir = "makes"

[tool.bijux_canon.package_dirs]
"bijux-canon-dev" = "packages/bijux-canon-dev"
"bijux-canon-runtime" = "packages/bijux-canon-runtime"
"bijux-canon-agent" = "packages/bijux-canon-agent"
"bijux-canon-ingest" = "packages/bijux-canon-ingest"
"bijux-canon-reason" = "packages/bijux-canon-reason"
"bijux-canon-index" = "packages/bijux-canon-index"
"compat-agentic-flows" = "packages/compat-agentic-flows"
"compat-bijux-agent" = "packages/compat-bijux-agent"
"compat-bijux-rag" = "packages/compat-bijux-rag"
"compat-bijux-rar" = "packages/compat-bijux-rar"
"compat-bijux-vex" = "packages/compat-bijux-vex"

[tool.uv.sources]
bijux-canon-runtime = { workspace = true }
bijux-canon-agent = { workspace = true }
bijux-canon-dev = { workspace = true }
bijux-canon-ingest = { workspace = true }
bijux-canon-reason = { workspace = true }
bijux-canon-index = { workspace = true }
agentic-flows = { workspace = true }
bijux-agent = { workspace = true }
bijux-rag = { workspace = true }
bijux-rar = { workspace = true }
bijux-vex = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.*)$"
fallback-version = "0.1.0"
raw-options = { git_describe_command = "git describe --dirty --tags --long --match 'v*'", local_scheme = "dirty-tag", version_scheme = "guess-next-dev", root = ".", search_parent_directories = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
